Fix map filters hiding behind status bar

--- a/src/Home/Map/Filters/styles.css
+++ b/src/Home/Map/Filters/styles.css
@@ -3,6 +3,7 @@
   align-items: center;
   z-index: 10;
   padding: 0 3px 10px;
+  padding-top: var(--ion-safe-area-top, 0);
   width: 100%;
   overflow-x: scroll;
   scrollbar-width: none;
@@ -29,10 +30,11 @@
 
   /* from tailwind shadow-md */
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color),
-    0 2px 4px -2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
-    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  --tw-shadow-colored:
+    0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow:
+    var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000),
+    var(--tw-shadow);
 }
 
 /* Hide checkbox */
